# python-template

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/hooks/: .pre-commit-config.yml
.github/workflows/: build.yml  codeql.yml  dependabot.yml
tests/: test_foo.py
