[tool.poetry]
name = "python-template"
version = "0.3.0"
description = "Python template repository for ML projects"
authors = ["peepo-dev-family"]

[tool.poetry.dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.2"
plotly = "^5.14.1"
python = "~3.10"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.2"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
vulture = "^2.7"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "False"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --log-level=CRITICAL"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
