[tool.poetry]
name = "python-template"
version = "0.3.0"
description = "Python template repository for ML projects"
authors = ["peepo-dev-family"]

[tool.poetry.dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.2"
plotly = "^5.14.0"
python = "~3.10"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
codespell = "^2.2.4"
coverage = "^7.2.2"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
isort = "^5.11.4"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyupgrade = "^3.4.0"
vulture = "^2.7"
yesqa = "^1.4.0"

[tool.flake8]
max-line-length = 88
include = "src"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
py_version = '310'
use_parentheses = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false

[tool.codespell]
ignore-words = ".codespell"

[tool.pytest.ini_options]
addopts = "-ra --log-level=CRITICAL"
minversion = "7.0"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
