[tool.poetry]
name = "python-template"
version = "0.5.1"
description = "Python template repository for ML projects"
authors = ["peepo-dev-family"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
codespell = "^2.2.6"
coverage = "^7.2.7"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
isort = "^5.11.4"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
pyupgrade = "^3.4.0"
ruff = "^0.0.286"
yesqa = "^1.4.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
py_version = '310'
use_parentheses = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.codespell]
ignore-words = ".codespell"

[tool.pytest.ini_options]
addopts = "-ra --log-level=CRITICAL"
minversion = "7.0"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
